# use-acoustics

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  RELEASING.md  release-plz.toml
.devcontainer/: devcontainer.json
.github/workflows/: advisory-rust-quality.yml  ci.yml  facade-publish-readiness.yml  publish-readiness.yml  publish.yml  release-plz-release.yml  sbom.yml
crates/use-acoustics/: Cargo.toml  README.md
crates/use-acoustics/src/: decibel.rs  frequency.rs  intensity.rs  lib.rs  prelude.rs  pressure.rs  speed.rs  wavelength.rs
crates/use-acoustics/tests/: acoustics_basics.rs
