[package]
name = "use-acoustics"
description = "Acoustics primitives for audible ranges, tones, and sound-pressure helpers."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-acoustics"
keywords = ["acoustics", "audio", "sound", "rustuse"]
categories = ["science"]

[lints]
workspace = true
