[package]
name = "use-acoustics"
description = "Composable primitive acoustics utilities for Rust."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-acoustics"
keywords = ["acoustics", "sound", "decibel", "frequency", "audio"]
categories = ["science", "mathematics"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
